--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ color:white;
 </div>
 
 <div id="gorzilla">
-<img src="gorilla.jpg">
+<img src="gorilla.jpg.png">
 <div class="footer">Created by Ahmed Ali Asif</div>
 </div>
 
