--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Warning</title>
+<title>System Scan</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="manifest" href="manifest.json">
 
@@ -16,7 +16,7 @@ box-sizing:border-box;
 body{
 background:black;
 color:white;
-font-family:Arial;
+font-family:Arial, sans-serif;
 height:100vh;
 overflow:hidden;
 }
@@ -30,23 +30,28 @@ display:flex;
 flex-direction:column;
 justify-content:center;
 align-items:center;
-background:black;
+background:linear-gradient(135deg,#000000,#111111,#000000);
 text-align:center;
-padding:20px;
 }
 
 #loading h1{
 color:red;
-margin-bottom:20px;
-font-size:24px;
+margin-bottom:25px;
+font-size:26px;
+animation:blink 1s infinite alternate;
+}
+
+@keyframes blink{
+from{opacity:0.4;}
+to{opacity:1;}
 }
 
 .spinner{
-border:5px solid #222;
-border-top:5px solid red;
+border:6px solid #222;
+border-top:6px solid red;
 border-radius:50%;
-width:60px;
-height:60px;
+width:70px;
+height:70px;
 animation:spin 1s linear infinite;
 }
 
@@ -55,19 +60,20 @@ animation:spin 1s linear infinite;
 100%{transform:rotate(360deg);}
 }
 
-/* Prank Image */
+/* Prank Screen */
 #prank{
 display:none;
 position:fixed;
 width:100%;
 height:100%;
 background:black;
+overflow:hidden;
 }
 
 #prank img{
 width:100%;
 height:100%;
-object-fit:contain; /* full image visible */
+object-fit:contain;
 background:black;
 }
 
@@ -78,8 +84,21 @@ width:100%;
 text-align:center;
 font-size:14px;
 color:white;
-background:rgba(0,0,0,0.5);
-padding:5px;
+background:rgba(0,0,0,0.6);
+padding:6px;
+}
+
+/* Emoji effect */
+.emoji{
+position:absolute;
+font-size:30px;
+animation:floatUp 1s ease-out forwards;
+pointer-events:none;
+}
+
+@keyframes floatUp{
+0%{transform:translateY(0) scale(1); opacity:1;}
+100%{transform:translateY(-80px) scale(1.5); opacity:0;}
 }
 </style>
 </head>
@@ -87,7 +106,7 @@ padding:5px;
 <body>
 
 <div id="loading">
-<h1>⚠ WARNING ⚠<br>Your Device Is Being Checked...</h1>
+<h1>⚠ WARNING ⚠<br>Scanning Your Device...</h1>
 <div class="spinner"></div>
 </div>
 
@@ -102,13 +121,29 @@ setTimeout(function(){
 document.getElementById("loading").style.display="none";
 document.getElementById("prank").style.display="block";
 
-document.getElementById("sound").play();
+let sound = document.getElementById("sound");
+sound.volume = 1.0;  // Full volume
+sound.play();
 
 if(navigator.vibrate){
-navigator.vibrate([300,100,300]);
+navigator.vibrate([300,100,300,100,500]);
 }
 
 },3000);
+
+/* Tap Emoji Effect */
+document.addEventListener("click", function(e){
+let emoji = document.createElement("div");
+emoji.className = "emoji";
+emoji.innerHTML = "🖕";
+emoji.style.left = e.clientX + "px";
+emoji.style.top = e.clientY + "px";
+document.body.appendChild(emoji);
+
+setTimeout(()=>{
+emoji.remove();
+},1000);
+});
 </script>
 
 </body>
