--- a/index.html
+++ b/index.html
@@ -152,6 +152,12 @@ emoji.remove();
 });
 
 </script>
-
+<script>
+if ('serviceWorker' in navigator) {
+  window.addEventListener('load', function() {
+    navigator.serviceWorker.register('sw.js');
+  });
+}
+</script>
 </body>
 </html>
